--- a/examples/change-language.html
+++ b/examples/change-language.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link href="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.js"></script>
+  <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
+  <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
   <style>
     body {
       margin: 0;
@@ -37,16 +37,16 @@
   <script>
     // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token ! 
     const accessToken = '<YOUR_ACCESS_TOKEN>';
-    const map = new mapboxgl.Map({
+    const map = new maplibregl.Map({
         container: 'map',
         style: `https://api.jawg.io/styles/jawg-dark.json?lang=en&access-token=${accessToken}`,
         zoom: 2,
         center: [2.3210938, 48.7965913],
         hash: true
       })
-      .addControl(new mapboxgl.NavigationControl(), 'top-right');
+      .addControl(new maplibregl.NavigationControl(), 'top-right');
     // This plugin is used for right to left languages
-    mapboxgl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
+    maplibregl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
 
     map.on('load', function() {
       document
