--- a/examples/add-marker.html
+++ b/examples/add-marker.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link href="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.js"></script>
+  <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
+  <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
   <style>
     body {
       margin: 0;
@@ -26,21 +26,21 @@
   <script>
     // Don't forget to replace <YOUR_ACCESS_TOKEN> by your real access token ! 
     const accessToken = '<YOUR_ACCESS_TOKEN>';
-    const map = new mapboxgl.Map({
+    const map = new maplibregl.Map({
       container: 'map',
       style: `https://api.jawg.io/styles/jawg-terrain.json?access-token=${accessToken}`,
       zoom: 11,
       center: [2.349902, 48.852966],
-    }).addControl(new mapboxgl.NavigationControl(), 'top-right');
+    }).addControl(new maplibregl.NavigationControl(), 'top-right');
     // This plugin is used for right to left languages
-    mapboxgl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
+    maplibregl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
 
     // This add a marker with the default icon
-    new mapboxgl.Marker().setLngLat([2.349902, 48.852966]).addTo(map);
+    new maplibregl.Marker().setLngLat([2.349902, 48.852966]).addTo(map);
     // Marker with custom icon
     const el = document.createElement('div');
     el.className = 'marker';
-    new mapboxgl.Marker(el)
+    new maplibregl.Marker(el)
       .setLngLat([2.294694, 48.858093])
       .addTo(map);
   </script>
