--- a/examples/change-style.html
+++ b/examples/change-style.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link href="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://unpkg.com/mapbox-gl@1.11.1/dist/mapbox-gl.js"></script>
+  <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
+  <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
   <style>
     body {
       margin: 0;
@@ -37,14 +37,14 @@
     const accessToken = '<YOUR_ACCESS_TOKEN>';
     const layerList = document.getElementById('styles');
     const options = layerList.getElementsByTagName('option');
-    const map = new mapboxgl.Map({
+    const map = new maplibregl.Map({
       container: 'map',
       style: `https://api.jawg.io/styles/${options[0].value}.json?access-token=${accessToken}`,
       zoom: 12,
       center: [35.51, 33.88]
-    }).addControl(new mapboxgl.NavigationControl(), 'top-right');
+    }).addControl(new maplibregl.NavigationControl(), 'top-right');
     // This plugin is used for right to left languages
-    mapboxgl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
+    maplibregl.setRTLTextPlugin('https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js');
 
     map.on('load', function() {
       document
