feat: add display route example

--- a/examples/simple-map.html
+++ b/examples/simple-map.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <link href='https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css' rel='stylesheet' />
-  <script src='https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js'></script>
+  <meta charset=UTF-8>
+  <link href='https://unpkg.com/maplibre-gl@2.1.0/dist/maplibre-gl.css' rel='stylesheet' />
+  <script src='https://unpkg.com/maplibre-gl@2.1.0/dist/maplibre-gl.js'></script>
   <style>
     body {
       margin: 0;
