--- a/examples/display-route.html
+++ b/examples/display-route.html
@@ -52,7 +52,14 @@
           map.addSource("route", {
             type: "geojson",
             data: route.geometry
-          })
+          });
+
+          // Set the first label layer name as we want to insert our layers just before the labels.
+          // This is style specific, here we use jawg-streets which has a "road-shield" layer.
+          // For other styles this is "housenum-label".
+          // If you are using a custom style you can check the layer name in the style JSON: https://api.jawg.io/styles/{styleId}.json?access-token=${accessToken}
+          const firstLabelLayerId = "road-shield";
+
           map.addLayer({
             id: "route-line",
             type: "line",
@@ -71,8 +78,8 @@
                 18, 8
               ]
             }
-            // Add the layer before the first label layer e.g. "housenum-label"
-          }, "housenum-label");
+            // Add the layer before the first label layer e.g. "road-shield"
+          }, firstLabelLayerId);
 
           // (optional) Add an outline to the route for better rendering
           map.addLayer({
@@ -100,8 +107,8 @@
                 18, 8
               ]
             }
-            // Add the layer before the first label layer e.g. "housenum-label"
-          }, "housenum-label");
+            // Add the layer before the first label layer e.g. "road-shield"
+          }, firstLabelLayerId);
 
           // Show the starting and the ending points as circles
           map.addLayer({
@@ -129,8 +136,8 @@
               "circle-stroke-width": 3,
               "circle-stroke-color": "#4D93E3"
             }
-            // Add the layer before the first label layer e.g. "housenum-label"
-          }, "housenum-label");
+            // Add the layer before the first label layer e.g. "road-shield"
+          }, firstLabelLayerId);
 
         });
     });
